begin user settings features
