# blog-backend/storage/api-docs/api-docs.json
@@ -9,6 +9,41 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/v1/auth/email/resend": {
+            "get": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Resend",
+                "description": "Resend email verification of current user",
+                "operationId": "resend",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                },
+                "security": [
+                    {
+                        "passport": []
+                    }
+                ]
+            }
+        },
         "/api/v1/auth/login": {
             "post": {
                 "tags": [
